add secret policy restart

--- a/gitops/applications/base/netbird-operator/kyverno-policy.yaml
+++ b/gitops/applications/base/netbird-operator/kyverno-policy.yaml
@@ -38,3 +38,49 @@ spec:
             value: ["CREATE", "UPDATE"]
       skipBackgroundRequests: true
   validationFailureAction: Audit
+---
+apiVersion: kyverno.io/v1
+kind: ClusterPolicy
+metadata:
+  name: restart-netbird-operator
+  annotations:
+    policies.kyverno.io/title: Restart netbird operator pod on secret update
+    policies.kyverno.io/category: Default Policies
+    policies.kyverno.io/severity: medium
+    policies.kyverno.io/subject: "*platform.com"
+    policies.kyverno.io/description: >-
+      This policy requires the restart of netbird operator pod when the secret is updated
+    argocd.argoproj.io/sync-wave: "0"
+spec:
+  rules:
+    - name: add-annotation-on-secret-update
+      match:
+        any:
+          - resources:
+              kinds:
+                - Secret
+              names:
+                - ${ARGOCD_ENV_netbird_operator_api_key_secret}
+              namespaces:
+                - ${ARGOCD_ENV_netbird_operator_namespace}
+      mutate:
+        patchStrategicMerge:
+          spec:
+            template:
+              metadata:
+                annotations:
+                  kyverno.platform.eon.com/triggerrestart: "{{request.object.metadata.resourceVersion}}"
+        targets:
+          - apiVersion: apps/v1
+            kind: Deployment
+            namespace: ${ARGOCD_ENV_netbird_operator_namespace}
+            selector:
+              matchLabels:
+                app.kubernetes.io/name: kubernetes-operator
+      preconditions:
+        all:
+          - key: "{{request.operation}}"
+            operator: Equals
+            value: UPDATE
+      skipBackgroundRequests: true
+  validationFailureAction: Audit
