default scrap interval for istio

--- a/gitops/applications/base/monitoring-post-config/grafana-crs.yaml
+++ b/gitops/applications/base/monitoring-post-config/grafana-crs.yaml
@@ -63,6 +63,7 @@ spec:
     editable: true
     jsonData:
       httpHeaderName1: "X-Scope-OrgID"
+      timeInterval: 5m
     secureJsonData:
       httpHeaderValue1: "infitx" # TODO: possibly expose it as configurable env var
 ---
