fix: gitlab vault token access

--- a/gitops/applications/base/gitlab-post-config/gitlab-post-config.yaml
+++ b/gitops/applications/base/gitlab-post-config/gitlab-post-config.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   parameters:
     vaultFqdn: vault.${ARGOCD_ENV_vault_dns_subdomain}
+    gitlabFqdn: gitlab.${ARGOCD_ENV_gitlab_dns_subdomain}
   providerConfigsRef:
     gitlabProvider: gitlab-provider
     kubernetesProvider: kubernetes-provider
