--- a/gitops/applications/base/monitoring/values-kube-prometheus.yaml
+++ b/gitops/applications/base/monitoring/values-kube-prometheus.yaml
@@ -19,11 +19,11 @@ prometheus:
   externalLabels:
     cluster: ${ARGOCD_ENV_cluster_label_value}
   resourcesPreset: ${ARGOCD_ENV_resources_preset_bitnami}
-  # remoteWrite:
-  #   - name: central-monitoring
-  #     url: http://central-monitoring-grafana-mimir-gateway/api/v1/push
-  #     headers:
-  #       X-Scope-OrgID: ${ARGOCD_ENV_remote_write_tenant_id}
+  remoteWrite:
+    - name: central-monitoring
+      url: http://central-monitoring-grafana-mimir-gateway/api/v1/push
+      headers:
+        X-Scope-OrgID: ${ARGOCD_ENV_remote_write_tenant_id}
   remoteRead:
     - name: central-monitoring
       url: http://central-monitoring-grafana-mimir-gateway/prometheus/api/v1/read
