--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -29,9 +29,9 @@ netbird_rds_replica_count: "'1'"
 netbird_rds_instance_class: "db.t3.medium"
 netbird_rds_storage_encrypted: "'true'"
 netbird_rds_skip_final_snapshot: "'true'"
-netbird_rds_postgres_storage_size: "''"  #"'100'"" for conventional rds
+netbird_rds_postgres_storage_size: "''" #"'100'"" for conventional rds
 netbird_rds_storage_type: "''" # io1 for conventional rds
-netbird_rds_storage_iops: "''"  #"'5000'" for conventional rds
+netbird_rds_storage_iops: "''" #"'5000'" for conventional rds
 netbird_rds_allow_major_version_upgrade: "'false'"
 netbird_rds_apply_immediately: "'false'"
 netbird_rds_deletion_protection: "'false'"
@@ -77,8 +77,8 @@ crossplane_packages_gitlab_version: "v0.1.0"
 crossplane_packages_vault_config_version: "v0.1.0-pr56-14778621124"
 crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
 crossplane_packages_sc_bootstrap_version: "v0.1.0"
-crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr37-14792095870"
-crossplane_packages_nb_config_version: "v0.1.0-pr37-14796363854"
+crossplane_packages_sc_nboperatorinstall_version: "v0.1.0"
+crossplane_packages_nb_config_version: "v0.1.0"
 crossplane_packages_aws_documentdb_version: "v0.3.0-pr50-14597997746"
 crossplane_packages_aws_rds_version: "v0.1.0-pr47-14531737956"
 velero_helm_version: "8.3.0"
@@ -245,9 +245,9 @@ gitlab_rds_replica_count: "'1'"
 gitlab_rds_instance_class: "db.t3.medium"
 gitlab_rds_storage_encrypted: "'true'"
 gitlab_rds_skip_final_snapshot: "'true'"
-gitlab_rds_postgres_storage_size: "''"  #"'100'"" for conventional rds
+gitlab_rds_postgres_storage_size: "''" #"'100'"" for conventional rds
 gitlab_rds_storage_type: "''" # io1 for conventional rds
-gitlab_rds_storage_iops: "''"  #"'5000'" for conventional rds
+gitlab_rds_storage_iops: "''" #"'5000'" for conventional rds
 gitlab_rds_allow_major_version_upgrade: "'false'"
 gitlab_rds_apply_immediately: "'false'"
 gitlab_rds_deletion_protection: "'false'"
@@ -269,9 +269,9 @@ praefect_rds_replica_count: "'1'"
 praefect_rds_instance_class: "db.t3.medium"
 praefect_rds_storage_encrypted: "'true'"
 praefect_rds_skip_final_snapshot: "'true'"
-praefect_rds_postgres_storage_size: "''"  #"'100'"" for conventional rds
+praefect_rds_postgres_storage_size: "''" #"'100'"" for conventional rds
 praefect_rds_storage_type: "''" # io1 for conventional rds
-praefect_rds_storage_iops: "''"  #"'5000'" for conventional rds
+praefect_rds_storage_iops: "''" #"'5000'" for conventional rds
 praefect_rds_allow_major_version_upgrade: "'false'"
 praefect_rds_apply_immediately: "'false'"
 praefect_rds_deletion_protection: "'false'"
@@ -306,9 +306,9 @@ zitadel_rds_replica_count: "'1'"
 zitadel_rds_instance_class: "db.t3.medium"
 zitadel_rds_storage_encrypted: "'true'"
 zitadel_rds_skip_final_snapshot: "'true'"
-zitadel_rds_postgres_storage_size: "''"  #"'100'"" for conventional rds
+zitadel_rds_postgres_storage_size: "''" #"'100'"" for conventional rds
 zitadel_rds_storage_type: "''" # io1 for conventional rds
-zitadel_rds_storage_iops: "''"  #"'5000'" for conventional rds
+zitadel_rds_storage_iops: "''" #"'5000'" for conventional rds
 zitadel_rds_allow_major_version_upgrade: "'false'"
 zitadel_rds_apply_immediately: "'false'"
 zitadel_rds_deletion_protection: "'false'"
