Feature/move nb to operator merge to storage cluster (#561)
* first draft refactor

* add kyverno to sc

* upgrade packages

* update claims for nb post config

* add missing tag

* add kyverno

* fix ns

* clean up env var

* refactor nbpc

* bump package version

* fix release name and update package

* bump nb prov version

* attempt to fix ordering of nb post config

* bump package

* fix ARGOCD_ENV_security_netbird_operator_sync_wave

* add sync wave to deployment

* udate syncwave var

* bump package

* update netbird

* fix k8s provider name

* fix operator cluster name

* add wipe commands to cloud init for ceph vol

* typo

* missing ns

* bump packages

* bump package

* bump package

* update package

* bump provider for policy fix

* move operator to different app

* bump packagge

* add nb operator

* change ns

* move claim to op

* missed ns

* bump package

* add param for ns

* add cluster name

* bump package

* change resourcename

* bump install pack

* policy fix version bump

* refactor nb packages for cidr network resource

* bump to .2

* add debug repo

* fix claims

* add vars for cidrs

* missing var

* add --allowed-unsafe-sysctls=net.ipv4.ip_forward

* bump package

* bump provider

* add kyverno policy

* bump package

* bump package

* fix values

* bump package

* revert helm change

* add secret policy restart

* bump package

* remove wipefs

* fixes to comments

--- a/gitops/applications/base/netbird-operator/kustomization.yaml
+++ b/gitops/applications/base/netbird-operator/kustomization.yaml
@@ -2,6 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
+  - nbopbootstrap-claim.yaml
+  - nboppost-claim.yaml
+  - kyverno-policy.yaml
 helmCharts:
   - name: kubernetes-operator
     releaseName: ${ARGOCD_ENV_netbird_operator_app_name}
