--- a/gitops/applications/base/netbird-operator/netbird-operator-values.yaml
+++ b/gitops/applications/base/netbird-operator/netbird-operator-values.yaml
@@ -5,8 +5,7 @@ ingress:
   router:
     enabled: true
   kubernetesAPI:
-    enabled: true
-  #   groups: ["${ARGOCD_ENV_netbird_operator_kubeapi_group}"]
+    enabled: false
 netbirdAPI:
   keyFromSecret: ${ARGOCD_ENV_netbird_operator_api_key_secret}
 managementURL: ${ARGOCD_ENV_netbird_operator_management_url}
