--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/netbird-operator/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/netbird-operator/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - providerconfig.yaml
   - nbopinstall-claim.yaml
+  - nbopbootstrap-claim.yaml
+  - nboppost-claim.yaml
