--- a/gitops/argo-apps/base/capi.yaml
+++ b/gitops/argo-apps/base/capi.yaml
@@ -119,6 +119,9 @@ spec:
         - name: "sc_root_argocd_repo_url"
           value: "${ARGOCD_ENV_argocd_repo_url}"
 
+        - name: "capi_cluster_proxmox_ceph_volume"
+          value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_ceph_volume}"
+          
         - name: "capi_os_disk_size"
           value: "${ARGOCD_ENV_utils_capi_capi_os_disk_size}"
 
