--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -77,7 +77,7 @@ crossplane_functions_kcl_version: "0.11.3"
 crossplane_functions_auto_ready_version: "0.4.2"
 crossplane_functions_extra_resources_version: "0.0.3"
 crossplane_packages_objectstores_version: "v0.1.0"
-crossplane_packages_utils_version: "v0.3.0"
+crossplane_packages_utils_version: "v0.4.1-pr43-14794044845"
 crossplane_packages_gitlab_version: "v0.2.0-pr64-14796403112"
 crossplane_packages_vault_config_version: "v0.1.0-pr56-14778621124"
 crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
