--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -81,6 +81,7 @@ crossplane_packages_utils_version: "v0.4.1-pr43-14794044845"
 crossplane_packages_gitlab_version: "v0.2.0-pr64-14796403112"
 crossplane_packages_vault_config_version: "v0.1.0-pr56-14778621124"
 crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
+crossplane_packages_sc_mysql_version: "v0.1.0-pr43-14800168009"
 crossplane_packages_sc_bootstrap_version: "v0.1.0"
 crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr37-14402159611"
 crossplane_packages_nb_config_version: "v0.1.0-pr38-14361249221"
