fix: add route53 provider

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -71,6 +71,7 @@ crossplane_providers_aws_s3_version: "1.21.0"
 crossplane_providers_aws_iam_version: "1.21.0"
 crossplane_providers_aws_docdb_version: "1.21.0"
 crossplane_providers_aws_rds_version: "1.21.0"
+crossplane_providers_aws_route53_version: "1.21.0"
 crossplane_providers_aws_aws_ec2_version: "1.21.0"
 crossplane_functions_patch_and_transform_version: "0.8.2"
 crossplane_functions_go_templating_version: "0.8.0"
