--- a/gitops/applications/base/crossplane-providers/aws.yaml
+++ b/gitops/applications/base/crossplane-providers/aws.yaml
@@ -57,3 +57,12 @@ metadata:
     argocd.argoproj.io/sync-wave: 10
 spec:
   package: ghcr.io/mojaloop/infra/upbound/provider-aws-rds:v${ARGOCD_ENV_crossplane_providers_aws_rds_version}
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-aws-route53
+  annotations:
+    argocd.argoproj.io/sync-wave: 10
+spec:
+  package: ghcr.io/mojaloop/infra/upbound/provider-aws-route53:v${ARGOCD_ENV_crossplane_providers_aws_route53_version}
