--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -42,6 +42,7 @@ netbird_db_backup_retention_period: "'1'"
 netbird_db_preferred_backup_window: "07:00-09:00"
 netbird_db_preferred_maintenance_window: "Mon:00:00-Mon:01:00"
 #end db settings
+netbird_operator_helm_version: "0.1.10"
 
 stunner_gateway_operator_helm_version: "0.19.0"
 nexus_helm_version: "4.44.0"
