--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -78,7 +78,7 @@ crossplane_packages_gitlab_version: "v0.1.0"
 crossplane_packages_vault_config_version: "v0.1.0-pr56-14778621124"
 crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
 crossplane_packages_sc_bootstrap_version: "v0.1.0"
-crossplane_packages_sc_nboperatorinstall_version: "v0.1.0"
+crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr66-14802234796"
 crossplane_packages_nb_config_version: "v0.1.0"
 crossplane_packages_aws_documentdb_version: "v0.3.0-pr50-14597997746"
 crossplane_packages_aws_rds_version: "v0.1.0-pr47-14531737956"
