fix: add mongdb package

--- a/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
+++ b/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
@@ -86,3 +86,11 @@ metadata:
 spec:
   package: ghcr.io/mojaloop/iac-crossplane-packages/sc-mysqlcluster:${ARGOCD_ENV_crossplane_packages_sc_mysql_version}
   skipDependencyResolution: true
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Configuration
+metadata:
+  name: sc-mongodbcluster
+spec:
+  package: ghcr.io/mojaloop/iac-crossplane-packages/sc-mongodbcluster:${ARGOCD_ENV_crossplane_packages_sc_mongodb_version}
+  skipDependencyResolution: true
