--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-databases.yaml
@@ -190,7 +190,43 @@ common_mongodb:
   provider: in-cluster  # possbile values are documentdb, dbaas and in-cluster
   app_owner: "mojaloop"
   dbaas_resource_config:
-    pgdb_helm_version: "0.1.0"
+    cr_version: "1.19.1"
+    image: "percona/percona-server-mongodb:7.0.15-9-multi"
+
+    # Backup inputs
+    backup_enabled: false
+    backup_image: "percona/percona-backup-mongodb:2.8.0-multi"
+    backup_verify_tls: true
+    backup_schedule_name: "daily-backup"
+    backup_cron_schedule: "0 0 * * *"
+    backup_retention: 7
+    schedule_enabled: false
+
+    # Replset inputs
+    replset_name: "rs0"
+    replset_size: 3
+    replset_limits_cpu: "300m"
+    replset_limits_memory: "0.5G"
+    replset_requests_cpu: "300m"
+    replset_requests_memory: "0.5G"
+    replset_storage: 3Gi
+
+    # Sharding inputs
+    sharding_enabled: true
+    configsvr_size: 3
+    configsvr_expose_enabled: false
+    configsvr_expose_type: "clusterIP"
+    configsvr_limits_cpu: "300m"
+    configsvr_limits_memory: "0.5G"
+    configsvr_requests_cpu: "300m"
+    configsvr_requests_memory: "0.5G"
+    configsvr_storage: 3Gi
+
+    mongos_size: 3
+    mongos_limits_cpu: "300m"
+    mongos_limits_memory: "0.5G"
+    mongos_requests_cpu: "300m"
+    mongos_requests_memory: "0.5G"
   external_resource_config:
     allocated_storage: 100
     allow_major_version_upgrade: false
