--- a/gitops/applications/overlays/mongodb_provider/documentdb/deploy-env-onboard/docdb-secrets.yaml
+++ b/gitops/applications/overlays/mongodb_provider/documentdb/deploy-env-onboard/docdb-secrets.yaml
@@ -64,7 +64,7 @@ spec:
   output:
     name: ${ARGOCD_ENV_db_secret}
     stringData:
-      password: "{{ .dynamicsecret_db_password.password }}"
+      MONGODB_USER_ADMIN_PASSWORD: "{{ .dynamicsecret_db_password.password }}"
     type: Opaque
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
