--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-databases.yaml
@@ -88,7 +88,7 @@ common_platform_db:
       mojaloop/cost_center: mlf-iac-sandbox
       mojaloop/env: ft-sbox-rw
       mojaloop/owner: Samuel-Kummary
-    username: platform
+    username: root
     master_user_password_secret_namespace: stateful-resources
     master_user_password_secret: common-platform-db-secret
     master_user_password_secret_key: password
@@ -178,7 +178,7 @@ common_mojaloop_db:
       mojaloop/cost_center: mlf-iac-sandbox
       mojaloop/env: ft-sbox-rw
       mojaloop/owner: Samuel-Kummary
-    username: mojaloop
+    username: root
     master_user_password_secret_namespace: stateful-resources
     master_user_password_secret: common-mojaloop-db-secret
     master_user_password_secret_key: password
@@ -262,7 +262,7 @@ common_mongodb:
       mojaloop/cost_center: mlf-iac-sandbox
       mojaloop/env: ft-sbox-rw
       mojaloop/owner: Samuel-Kummary
-    username: commonmongodbuser
+    username: userAdmin
     master_user_password_secret_namespace: stateful-resources
     master_user_password_secret: common-mongodb-secret
     master_user_password_secret_key: password
