--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-databases.yaml
@@ -3,6 +3,7 @@ common_platform_db:
   app_owner: "platform"
   dbaas_resource_config:
     # Percona XtraDB Cluster (PXC) specific configurations
+    cluster_name: "common-platform-db"                          # Name of the cluster
     cr_version: "1.16.1"                                         # Custom Resource version for the operator
     pxc_image: "percona/percona-xtradb-cluster:8.0.39-30.1"      # Docker image for the PXC nodes
     mysql_storage_size: "100Gi"                                  # Storage size for MySQL data
@@ -101,6 +102,7 @@ common_mojaloop_db:
   app_owner: "mojaloop"
   dbaas_resource_config:
     # Percona XtraDB Cluster (PXC) specific configurations
+    cluster_name: "common-mojaloop-db"                          # Name of the cluster
     cr_version: "1.16.1"                                         # Custom Resource version for the operator
     pxc_image: "percona/percona-xtradb-cluster:8.0.39-30.1"      # Docker image for the PXC nodes
     mysql_storage_size: "100Gi"                                  # Storage size for MySQL data
@@ -190,6 +192,7 @@ common_mongodb:
   provider: in-cluster  # possbile values are documentdb, dbaas and in-cluster
   app_owner: "mojaloop"
   dbaas_resource_config:
+    cluster_name: "common-mongodb"                          # Name of the cluster
     cr_version: "1.19.1"
     image: "percona/percona-server-mongodb:7.0.15-9-multi"
 
