patch rook-ceph clusterrole

--- a/gitops/applications/base/sc-storage/kustomization.yaml
+++ b/gitops/applications/base/sc-storage/kustomization.yaml
@@ -28,3 +28,5 @@ helmCharts:
   #   valuesFile: rook-ceph-cluster-values.yaml
   #   namespace: ${ARGOCD_ENV_storage_namespace}
   #   includeCRDs: true
+patchesStrategicMerge:
+  - patch-rook-ceph-clusterrole.yaml
