Optimize prometheus scrap interval (#558)
- Make prometheus scrap interval configurable
- Remove hardcoded scrap interval for istio metrics
- Upgrade instil dashboards to latest

--- a/gitops/applications/base/monitoring-post-config/grafana-crs.yaml
+++ b/gitops/applications/base/monitoring-post-config/grafana-crs.yaml
@@ -63,6 +63,7 @@ spec:
     editable: true
     jsonData:
       httpHeaderName1: "X-Scope-OrgID"
+      timeInterval: ${ARGOCD_ENV_prometheus_scrape_interval}
     secureJsonData:
       httpHeaderValue1: "infitx" # TODO: possibly expose it as configurable env var
 ---
@@ -81,6 +82,8 @@ spec:
     url: http://prometheus-operated:9090
     isDefault: false
     editable: true
+    jsonData:
+      timeInterval: ${ARGOCD_ENV_prometheus_scrape_interval}
 ---
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDatasource
