--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -94,6 +94,7 @@ grafana_operator_version: "4.4.12"
 grafana_image_version: 11.1.1
 prometheus_pvc_size: 50Gi
 prometheus_scrape_interval: 5m
+prometheus_rate_interval: 15m
 prometheus_retention_period: 10d
 
 
