--- a/gitops/applications/base/sc-storage/ceph-objectstore-crs.yaml
+++ b/gitops/applications/base/sc-storage/ceph-objectstore-crs.yaml
@@ -17,6 +17,9 @@ spec:
       codingChunks: 1
   gateway:
     hostNetwork: false
+    resources:
+      limits:
+        memory: 2Gi
     port: 80
     # securePort: 443
     # sslCertificateRef: objectstore-internal-tls
