--- a/gitops/applications/base/vault-post-config/kustomization.yaml
+++ b/gitops/applications/base/vault-post-config/kustomization.yaml
@@ -3,4 +3,4 @@ kind: Kustomization
 resources:
   - external-secretstore.yaml
   - vault-provider-config.yaml
-#  - vault-post-config.yaml
+  - vault-post-config.yaml
