--- a/gitops/applications/base/zitadel-post-config/vault-oidc-xplane-terraform.yaml
+++ b/gitops/applications/base/zitadel-post-config/vault-oidc-xplane-terraform.yaml
@@ -11,10 +11,7 @@ spec:
     module: git::https://github.com/mojaloop/iac-modules.git//terraform/config-params/ccnew-config/vault-oidc?ref=${ARGOCD_ENV_terraform_modules_tag}
     env:
       - name: TF_VAR_admin_policy_name
-        secretKeyRef:
-          namespace: ${ARGOCD_ENV_vault_namespace}
-          name: ${ARGOCD_ENV_vault_tf_post_config_output_secret}
-          key: admin_policy_name
+        value: "vault-admin"
       - name: TF_VAR_zitadel_admin_human_user_id
         secretKeyRef:
           namespace: ${ARGOCD_ENV_zitadel_namespace}
@@ -78,7 +75,7 @@ spec:
   # workspace that uses this provider config, for example to setup Terraform
   # providers.
   configuration: |
-    terraform { 
+    terraform {
         backend "kubernetes" {
           secret_suffix     = "providerconfig-vault-oidc-config"
           namespace         = "${ARGOCD_ENV_zitadel_namespace}"
