--- a/gitops/argo-apps/base/metallb.yaml
+++ b/gitops/argo-apps/base/metallb.yaml
@@ -45,11 +45,17 @@ spec:
         - name: "metallb_version"
           value: "${ARGOCD_ENV_sc_metallb_version}"
 
-        - name: "metallb_ip_range_end"
-          value: "${ARGOCD_ENV_sc_metallb_ip_range_end}"
+        - name: "metallb_sc_ip_range_end"
+          value: "${ARGOCD_ENV_sc_metallb_sc_ip_range_end}"
 
-        - name: "metallb_ip_range_begin"
-          value: "${ARGOCD_ENV_sc_metallb_ip_range_begin}"
+        - name: "metallb_sc_ip_range_begin"
+          value: "${ARGOCD_ENV_sc_metallb_sc_ip_range_begin}"
+
+        - name: "sc_metallb_cc_envs_ip_range_begin"
+          value: "${ARGOCD_ENV_sc_metallb_cc_envs_ip_range_begin}"
+
+        - name: "sc_metallb_cc_envs_ip_range_end"
+          value: "${ARGOCD_ENV_sc_metallb_cc_envs_ip_range_end}"
 
         - name: "metallb_namespace"
           value: "${ARGOCD_ENV_sc_metallb_namespace}"
